# personal-site

./: .gitignore  CNAME  Cargo.toml  _config.yml  blog.html  compile-typst-site.toml  docker-compose.yml  flake.nix  functions.js  generate-feed.sh  index.html  index.md  portfolio.html
.github/workflows/: deploy-pages.yml
.well-known/matrix/: client  server
_includes/: footer.html  nav.html
_layouts/: default.html  post.html
_portfolio/: LeftUponRead.md  SeaOfThieves.md  game.md
_posts/: 2025-05-14-first-post.md  2025-05-15-a-second-post.md  2025-05-15-first-post.md  2025-09-06-UnrealWiiIdea.md  2025-09-08-SharedMemoryIdea.md  2025-09-25-Wii.md  2025-09-27-CrashReporting.md  2025-09-28-CrashReporting.md  2025-11-07-TracyWii.md  2025-11-07-UnrealWii.md  2025-11-10-CrashReporting.md  2025-12-01-TracyWii.md
css/: gruvbox.css  style.css
docs/: CNAME  functions.js  index.html
src/: blog.typ  index.typ  lib.rs  main.rs  style.css
src/blog/: shared-memory-idea.typ  tracy-wii.typ
src/blog/crash-reporting/: ep1.typ  ep2.typ  ep3.typ
src/blog/unreal-wii/: ep1.typ  ep2.typ  idea.typ
src/components/: mod.rs  pixel_rain.rs
templates/: base.typ
