[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { vesion = "0.20.0", features = ["csr"] }
gloo = "0.8.1"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
rand = "0.8.5"
getrandom = {version = "0.2.10", features = ["js"]}

[dependencies.web-sys]
version = "0.3.64"
features = [
	"Navigator",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window",
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"ImageData",
	"ImageBitmap"
]
